.tmp/pss-5003/parse/src/main/antlr4/puml3/.antlr/PUML3Parser.java
// Generated from /Users/ghowe/emculturate-pss/pss/parse/src/main/antlr4/puml3/PUML3.g4 by ANTLR 4.13.1



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PUML3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, BARBAR=2, FALSE=3, GE=4, LE=5, NOT=6, NOT_EQU=7, OR=8, TRUE=9, 
		LEFT_PARA=10, DOT=11, COMMA=12, RIGHT_PARA=13, UNDERSCORE=14, BAR=15, 
		COLON=16, DASH=17, EQU=18, GT=19, HAT=20, LT=21, MOD=22, EXCLAIM=23, PLUS=24, 
		SINGLE_QUOTE=25, DBL_QUOTE=26, SLASH=27, STAR=28, SYSDATE=29, DD_INSERT=30, 
		DD_UPDATE=31, DD_REJECT=32, DD_DELETE=33, NULL=34, COALESCE=35, DATESTR=36, 
		REGEXP_REPLACE=37, REGEXP_EXTRACT=38, DATE_ADD=39, DATE_SUB=40, CONCAT=41, 
		COUNT=42, IN=43, INITCAP=44, INSTR=45, LOG=46, POWER=47, SQRT=48, ABORT=49, 
		LOWER=50, UPPER=51, REPLACECHR=52, DATE_COMPARE=53, DATE_DIFF=54, DECODE=55, 
		ERROR=56, GET_DATE_PART=57, IF=58, IS_DATE=59, IS_NUMBER=60, IS_SPACES=61, 
		LAST_DAY=62, LENGTH=63, LOOKUP=64, LPAD=65, LTRIM=66, MAX=67, MIN=68, 
		REPLACESTR=69, REVERSE=70, ROUND=71, RPAD=72, RTRIM=73, SET_DATE_PART=74, 
		SUBSTRING=75, SUM=76, TO_CHAR=77, TO_DATE=78, TO_DECIMAL=79, TO_FLOAT=80, 
		TO_INTEGER=81, TRUNC=82, CONTAINS=83, ENDS_WITH=84, MATCHES=85, STARTS_WITH=86, 
		NOT_CONTAINS=87, NOT_ENDS_WITH=88, NOT_MATCHES=89, NOT_STARTS_WITH=90, 
		IS_EMPTY=91, IS_NOT_EMPTY=92, IS_NULL=93, IS_NOT_NULL=94, INT=95, LONG=96, 
		DOUBLE=97, FLOAT=98, BRCKT_ID=99, PUML_ID=100, STRING_VALUE=101, QUOTED_CONSTANT=102, 
		COMMENT=103, WS=104;
	public static final int
		RULE_condition = 0, RULE_equation = 1, RULE_condition_principal = 2, RULE_condition_statement = 3, 
		RULE_and_condition_statement = 4, RULE_negative_condition_statement = 5, 
		RULE_condition_parenthetical = 6, RULE_condition_expression = 7, RULE_unit_boolean_comparator = 8, 
		RULE_truth_value = 9, RULE_equation_principal = 10, RULE_equation_formula = 11, 
		RULE_multdiv_equation_formula = 12, RULE_power_equation_formula = 13, 
		RULE_string_equation_formula = 14, RULE_equation_parenthetical = 15, RULE_expression_term = 16, 
		RULE_function_call = 17, RULE_if_function_call = 18, RULE_boolean_function_call = 19, 
		RULE_bound_function_argument = 20, RULE_lookup_var_ref = 21, RULE_transformation_ref = 22, 
		RULE_puml_function_id = 23, RULE_puml_builtin = 24, RULE_boolean_function_id = 25, 
		RULE_lookup_function_id = 26, RULE_if_function_id = 27, RULE_mult_div_operator = 28, 
		RULE_power_operator = 29, RULE_add_sub_operator = 30, RULE_string_operator = 31, 
		RULE_plus = 32, RULE_minus = 33, RULE_multiply = 34, RULE_divide = 35, 
		RULE_concat = 36, RULE_modulo = 37, RULE_power = 38, RULE_boolean_comparator = 39, 
		RULE_equals = 40, RULE_not_equals = 41, RULE_less_than = 42, RULE_less_or_equal = 43, 
		RULE_greater_than = 44, RULE_greater_or_equal = 45, RULE_number_term = 46, 
		RULE_number = 47, RULE_generic_reference = 48, RULE_string_constant = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"condition", "equation", "condition_principal", "condition_statement", 
			"and_condition_statement", "negative_condition_statement", "condition_parenthetical", 
			"condition_expression", "unit_boolean_comparator", "truth_value", "equation_principal", 
			"equation_formula", "multdiv_equation_formula", "power_equation_formula", 
			"string_equation_formula", "equation_parenthetical", "expression_term", 
			"function_call", "if_function_call", "boolean_function_call", "bound_function_argument", 
			"lookup_var_ref", "transformation_ref", "puml_function_id", "puml_builtin", 
			"boolean_function_id", "lookup_function_id", "if_function_id", "mult_div_operator", 
			"power_operator", "add_sub_operator", "string_operator", "plus", "minus", 
			"multiply", "divide", "concat", "modulo", "power", "boolean_comparator", 
			"equals", "not_equals", "less_than", "less_or_equal", "greater_than", 
			"greater_or_equal", "number_term", "number", "generic_reference", "string_constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'||'", null, "'>='", "'<='", null, "'!='", null, null, "'('", 
			"'.'", "','", "')'", "'_'", "'|'", "':'", "'-'", "'='", "'>'", "'^'", 
			"'<'", "'%'", "'!'", "'+'", "'''", "'\"'", "'/'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "BARBAR", "FALSE", "GE", "LE", "NOT", "NOT_EQU", "OR", "TRUE", 
			"LEFT_PARA", "DOT", "COMMA", "RIGHT_PARA", "UNDERSCORE", "BAR", "COLON", 
			"DASH", "EQU", "GT", "HAT", "LT", "MOD", "EXCLAIM", "PLUS", "SINGLE_QUOTE", 
			"DBL_QUOTE", "SLASH", "STAR", "SYSDATE", "DD_INSERT", "DD_UPDATE", "DD_REJECT", 
			"DD_DELETE", "NULL", "COALESCE", "DATESTR", "REGEXP_REPLACE", "REGEXP_EXTRACT", 
			"DATE_ADD", "DATE_SUB", "CONCAT", "COUNT", "IN", "INITCAP", "INSTR", 
			"LOG", "POWER", "SQRT", "ABORT", "LOWER", "UPPER", "REPLACECHR", "DATE_COMPARE", 
			"DATE_DIFF", "DECODE", "ERROR", "GET_DATE_PART", "IF", "IS_DATE", "IS_NUMBER", 
			"IS_SPACES", "LAST_DAY", "LENGTH", "LOOKUP", "LPAD", "LTRIM", "MAX", 
			"MIN", "REPLACESTR", "REVERSE", "ROUND", "RPAD", "RTRIM", "SET_DATE_PART", 
			"SUBSTRING", "SUM", "TO_CHAR", "TO_DATE", "TO_DECIMAL", "TO_FLOAT", "TO_INTEGER", 
			"TRUNC", "CONTAINS", "ENDS_WITH", "MATCHES", "STARTS_WITH", "NOT_CONTAINS", 
			"NOT_ENDS_WITH", "NOT_MATCHES", "NOT_STARTS_WITH", "IS_EMPTY", "IS_NOT_EMPTY", 
			"IS_NULL", "IS_NOT_NULL", "INT", "LONG", "DOUBLE", "FLOAT", "BRCKT_ID", 
			"PUML_ID", "STRING_VALUE", "QUOTED_CONSTANT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PUML3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

		

	public PUML3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public Condition_principalContext condition_principal() {
			return getRuleContext(Condition_principalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PUML3Parser.EOF, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			condition_principal();
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EquationContext extends ParserRuleContext {
		public Equation_principalContext equation_principal() {
			return getRuleContext(Equation_principalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PUML3Parser.EOF, 0); }
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_equation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			equation_principal();
			setState(104);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_principalContext extends ParserRuleContext {
		public Condition_statementContext condition_statement() {
			return getRuleContext(Condition_statementContext.class,0);
		}
		public Condition_principalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_principal; }
	}

	public final Condition_principalContext condition_principal() throws RecognitionException {
		Condition_principalContext _localctx = new Condition_principalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_condition_principal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			condition_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_statementContext extends ParserRuleContext {
		public List<And_condition_statementContext> and_condition_statement() {
			return getRuleContexts(And_condition_statementContext.class);
		}
		public And_condition_statementContext and_condition_statement(int i) {
			return getRuleContext(And_condition_statementContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(PUML3Parser.OR); }
		public TerminalNode OR(int i) {
			return getToken(PUML3Parser.OR, i);
		}
		public Condition_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_statement; }
	}

	public final Condition_statementContext condition_statement() throws RecognitionException {
		Condition_statementContext _localctx = new Condition_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condition_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			and_condition_statement();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(109);
				match(OR);
				setState(110);
				and_condition_statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class And_condition_statementContext extends ParserRuleContext {
		public List<Negative_condition_statementContext> negative_condition_statement() {
			return getRuleContexts(Negative_condition_statementContext.class);
		}
		public Negative_condition_statementContext negative_condition_statement(int i) {
			return getRuleContext(Negative_condition_statementContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(PUML3Parser.AND); }
		public TerminalNode AND(int i) {
			return getToken(PUML3Parser.AND, i);
		}
		public And_condition_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and_condition_statement; }
	}

	public final And_condition_statementContext and_condition_statement() throws RecognitionException {
		And_condition_statementContext _localctx = new And_condition_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_and_condition_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			negative_condition_statement();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(117);
				match(AND);
				setState(118);
				negative_condition_statement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Negative_condition_statementContext extends ParserRuleContext {
		public Negative_condition_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative_condition_statement; }
	 
		public Negative_condition_statementContext() { }
		public void copyFrom(Negative_condition_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CONDITION_STMTContext extends Negative_condition_statementContext {
		public Condition_parentheticalContext condition_parenthetical() {
			return getRuleContext(Condition_parentheticalContext.class,0);
		}
		public CONDITION_STMTContext(Negative_condition_statementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NEGATIVE_CONDITION_STMTContext extends Negative_condition_statementContext {
		public TerminalNode NOT() { return getToken(PUML3Parser.NOT, 0); }
		public Condition_parentheticalContext condition_parenthetical() {
			return getRuleContext(Condition_parentheticalContext.class,0);
		}
		public NEGATIVE_CONDITION_STMTContext(Negative_condition_statementContext ctx) { copyFrom(ctx); }
	}

	public final Negative_condition_statementContext negative_condition_statement() throws RecognitionException {
		Negative_condition_statementContext _localctx = new Negative_condition_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_negative_condition_statement);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				_localctx = new NEGATIVE_CONDITION_STMTContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(NOT);
				setState(125);
				condition_parenthetical();
				}
				break;
			case FALSE:
			case TRUE:
			case LEFT_PARA:
			case DASH:
			case SYSDATE:
			case DD_INSERT:
			case DD_UPDATE:
			case DD_REJECT:
			case DD_DELETE:
			case NULL:
			case COALESCE:
			case DATESTR:
			case REGEXP_REPLACE:
			case REGEXP_EXTRACT:
			case DATE_ADD:
			case DATE_SUB:
			case CONCAT:
			case COUNT:
			case INITCAP:
			case INSTR:
			case LOG:
			case POWER:
			case SQRT:
			case ABORT:
			case LOWER:
			case UPPER:
			case REPLACECHR:
			case DATE_COMPARE:
			case DATE_DIFF:
			case DECODE:
			case ERROR:
			case GET_DATE_PART:
			case IF:
			case IS_DATE:
			case IS_NUMBER:
			case IS_SPACES:
			case LAST_DAY:
			case LENGTH:
			case LOOKUP:
			case LPAD:
			case LTRIM:
			case MAX:
			case MIN:
			case REPLACESTR:
			case REVERSE:
			case ROUND:
			case RPAD:
			case RTRIM:
			case SET_DATE_PART:
			case SUBSTRING:
			case SUM:
			case TO_CHAR:
			case TO_DATE:
			case TO_DECIMAL:
			case TO_FLOAT:
			case TO_INTEGER:
			case TRUNC:
			case IS_EMPTY:
			case IS_NOT_EMPTY:
			case IS_NULL:
			case INT:
			case LONG:
			case DOUBLE:
			case FLOAT:
			case BRCKT_ID:
			case PUML_ID:
			case QUOTED_CONSTANT:
				_localctx = new CONDITION_STMTContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				condition_parenthetical();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_parentheticalContext extends ParserRuleContext {
		public Condition_parentheticalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_parenthetical; }
	 
		public Condition_parentheticalContext() { }
		public void copyFrom(Condition_parentheticalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PARENTHETICAL_CONDITIONContext extends Condition_parentheticalContext {
		public TerminalNode LEFT_PARA() { return getToken(PUML3Parser.LEFT_PARA, 0); }
		public Condition_statementContext condition_statement() {
			return getRuleContext(Condition_statementContext.class,0);
		}
		public TerminalNode RIGHT_PARA() { return getToken(PUML3Parser.RIGHT_PARA, 0); }
		public PARENTHETICAL_CONDITIONContext(Condition_parentheticalContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CONDITION_EXPContext extends Condition_parentheticalContext {
		public Condition_expressionContext condition_expression() {
			return getRuleContext(Condition_expressionContext.class,0);
		}
		public CONDITION_EXPContext(Condition_parentheticalContext ctx) { copyFrom(ctx); }
	}

	public final Condition_parentheticalContext condition_parenthetical() throws RecognitionException {
		Condition_parentheticalContext _localctx = new Condition_parentheticalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition_parenthetical);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new CONDITION_EXPContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				condition_expression();
				}
				break;
			case 2:
				_localctx = new PARENTHETICAL_CONDITIONContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(LEFT_PARA);
				setState(131);
				condition_statement();
				setState(132);
				match(RIGHT_PARA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
